--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,32 +14,32 @@ services:
     volumes:
       - local-pgdata:/var/lib/postgresql/data
 
-  # backand:
-  #   build: vr-hakaton/
-  #   ports:
-  #     - 6060:6060
-  #   depends_on:
-  #     - postgres
-  #   environment:
-  #     enviroment: development
-  #     http_port: 6060
-  #     database_uri: postgres://postgres:1234@postgres:5432/database
+  backand:
+    build: vr-hakaton/
+    ports:
+      - 6060:6060
+    depends_on:
+      - postgres
+    environment:
+      enviroment: development
+      http_port: 6060
+      database_uri: postgres://postgres:1234@postgres:5432/database
 
-  # frontend:
-  #   build: hack_OKEI_front/
-  #   ports:
-  #     - 3000:3000
-  #   depends_on:
-  #     - backand
-  #   environment:
-  #     VITE_URL: http://backand:6060
+  frontend:
+    build: hack_OKEI_front/
+    ports:
+      - 3000:3000
+    depends_on:
+      - backand
+    environment:
+      VITE_URL: http://backand:6060
 
-  # bot:
-  #   build: vr_hack_bot/
-  #   depends_on:
-  #     - backand
-  #   environment:
-  #     API_URL: http://backand:6060/api/v1
+  bot:
+    build: vr_hack_bot/
+    depends_on:
+      - backand
+    environment:
+      API_URL: http://backand:6060/api/v1
 
 volumes:
   local-pgdata:
