--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,9 +26,9 @@ services:
       database_uri: postgres://postgres:1234@postgres:5432/database
 
   frontend:
-    build: hack_OKEI_front/
+    build: proVr_Front/
     ports:
-      - 3000:3000
+      - 5173:5173
     depends_on:
       - backand
     environment:
