--- a/proVr_Front/Dockerfile
+++ b/proVr_Front/Dockerfile
@@ -23,4 +23,4 @@ COPY . .
 EXPOSE 80
 
 # Устанавливаем команду, которая будет запускать приложение
-CMD ["yarn dev --host"]
+CMD ["yarn", "dev", "--host", "--port", "80"]
